--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,39 +5,35 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<form action="${loginProcessingUrl}" method="post">
+	<form action="" method="post">
 		<fieldset>
 			<legend>Please Login</legend>
 			<!-- use param.error assuming FormLoginConfigurer#failureUrl contains the query parameter error -->
-			<c:if test="${param.error != null}">
-				<div>
-					Failed to login.
-					<c:if test="${SPRING_SECURITY_LAST_EXCEPTION != null}">
-                  Reason: <c:out
-							value="${SPRING_SECURITY_LAST_EXCEPTION.message}" />
-					</c:if>
+			<div th:if="${param.error != null}">
+
+				Failed to login.
+				<div th:if="${SPRING_SECURITY_LAST_EXCEPTION != null}">
+					Reason:
+					<span th:text="${SPRING_SECURITY_LAST_EXCEPTION.message}" > </span>
 				</div>
-			</c:if>
-			<!-- the configured LogoutConfigurer#logoutSuccessUrl is /login?logout and contains the query param logout -->
-			<c:if test="${param.logout != null}">
-				<div>You have been logged out.</div>
-			</c:if>
-			<p>
-				<label for="username">Username</label> <input type="text"
-					id="username" name="username" />
-			</p>
-			<p>
-				<label for="password">Password</label> <input type="password"
-					id="password" name="password" />
-			</p>
-			<!-- if using RememberMeConfigurer make sure remember-me matches RememberMeConfigurer#rememberMeParameter -->
-			<p>
-				<label for="remember-me">Remember Me?</label> <input type="checkbox"
-					id="remember-me" name="remember-me" />
-			</p>
-			<div>
-				<button type="submit" class="btn">Log in</button>
 			</div>
+				<div>
+					<!-- the configured LogoutConfigurer#logoutSuccessUrl is /login?logout and contains the query param logout -->
+					<div th:if="${param.logout != null}">
+						<div>You have been logged out.</div>
+					</div>
+					<p>
+						<label for="username">Username</label> <input type="text"
+							id="username" name="username" />
+					</p>
+					<p>
+						<label for="password">Password</label> <input type="password"
+							id="password" name="password" />
+					</p>
+					<div>
+						<button type="submit" class="btn">Log in</button>
+					</div>
+					</div>
 		</fieldset>
 	</form>
 </body>
