--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -1,17 +1,57 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
-<head>
-<title>featuresector Dashboard</title>
-</head>
-<body>
-
-	<h1>featuresector Dashboard</h1>
-
-	<form action="/logout" method="POST">
-		<input type="hidden" th:name="${_csrf.parameterName}"
-			th:value="${_csrf.token}" />
-		<button type="submit">Logout</button>
-	</form>
-
-</body>
+  <head>
+    <title>featuresector Dashboard</title>
+    <script th:replace="fragments/header :: headerElement"></script>  
+  </head>
+  <body>
+    <div th:replace="fragments/header :: header"></div>
+    <!-- 
+      create = Http Post
+      read =   Http Get
+      update = Http Put
+      delete = Http Delete
+     -->
+    <div class="container" style="margin-top: 1.5em;">
+      <div class="row">
+        <div class="col-8">
+          <h1>featuresector Dashboard</h1>
+        </div>
+      </div>
+      
+      <div class="card" th:each="product : ${products}" style="margin: 1em 0em">
+        <div class="card-body">
+          <h5 class="card-title" th:text="${product.name}">Special title treatment</h5>
+          <h6 class="card-subtitle mb-2 text-muted" th:text="${product.published ? 'Published' : 'Not Published'}">Card subtitle</h6>
+          <a th:href="@{/products/{productId}(productId=${product.id})}" class="btn btn-info">Edit</a>
+          <a th:href="@{/p/{productName}(productName=${product.name})}" class="btn btn-info">View Feature Requests</a>
+        </div>
+      </div>
+      
+<!--       <div class="jumbotron"> -->
+<!--         <div th:if="${products != null}"> -->
+<!--           <div class="row" style="margin-top: -1em"> -->
+<!--             <div class="col"> -->
+<!--               <h2>Products</h2> -->
+<!--             </div> -->
+<!--           </div> -->
+          
+<!--           <div class="row" th:each="product : ${products}"> -->
+<!--             <div class="col"> -->
+<!--               <a th:href="@{/products/{productId}(productId=${product.id})}" th:text="${product.name}"></a> -->
+<!--             </div> -->
+<!--           </div> -->
+<!--         </div> -->
+<!--       </div> -->
+      
+      <div class="row">
+        <div class="col">
+          <form action="/products" method="post">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+            <button class="btn btn-primary" id="createProduct">Create a Product</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
