--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>dashboard</title>
-</head>
-<body>
-	<h1>Hwllo this is index</h1>
-</body>
+<html xmlns:th="http://thymeleaf.org">
+  <head>
+    <script th:replace="fragments/header :: headerElement"></script>
+    <title>featuresector Homepage</title>
+  </head>
+  <body>
+  <div th:replace="fragments/header :: header"></div>
+    <div class="container">
+      <div class="row" style="margin-top: 2em">
+        <div class="col-8">
+          <h1>Welcome to featuresector</h1>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
