--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,41 +1,62 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>featuresector Login</title>
+<script th:replace="fragments/header :: headerElement"></script>
+<script
+  src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+  crossorigin="anonymous"></script>
+<script type="text/javascript">
+  $(function () {
+    $("#createAccount").click(function () {
+      window.location.href = "/register";
+    });
+  });
+</script>
 </head>
 <body>
-	<form action="" method="post">
-	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-		<fieldset>
-			<legend>Please Login</legend>
-			<!-- use param.error assuming FormLoginConfigurer#failureUrl contains the query parameter error -->
-			<div th:if="${param.error != null}">
-
-				Failed to login.
-				<div th:if="${SPRING_SECURITY_LAST_EXCEPTION != null}">
-					Reason:
-					<span th:text="${SPRING_SECURITY_LAST_EXCEPTION.message}" > </span>
-				</div>
-			</div>
-				<div>
-					<!-- the configured LogoutConfigurer#logoutSuccessUrl is /login?logout and contains the query param logout -->
-					<div th:if="${param.logout != null}">
-						<div>You have been logged out.</div>
-					</div>
-					<p>
-						<label for="username">Username</label> <input type="text"
-							id="username" name="username" />
-					</p>
-					<p>
-						<label for="password">Password</label> <input type="password"
-							id="password" name="password" />
-					</p>
-					<div>
-						<button type="submit" class="btn">Log in</button>
-					</div>
-					</div>
-		</fieldset>
-	</form>
+  <div th:replace="fragments/header :: header"></div>
+  <div class="container">
+    <div class="card" style="margin-top: 1.5em;">
+      <div class="card-header"><h2>Please Login</h2></div>
+      <div class="card-body">
+          <form action="" method="post">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+            <!-- use param.error assuming FormLoginConfigurer#failureUrl contains the query parameter error -->
+            <div th:if="${param.error != null}" class="alert alert-danger" role="alert">
+              Failed to login.
+              <div th:if="${SPRING_SECURITY_LAST_EXCEPTION != null}">
+                      Reason: <span th:text="${SPRING_SECURITY_LAST_EXCEPTION.message}"></span>
+              </div>
+            </div>
+            <!-- the configured LogoutConfigurer#logoutSuccessUrl is /login?logout and contains the query param logout -->
+            <div th:if="${param.logout != null}">
+              You have been logged out.
+            </div>
+            <div class="form-group row">
+              <label for="username" class="col-12 col-sm-3 col-md-2 col-form-label">Username</label> 
+              <div class="col-12 col-sm-9 col-md-10">
+                <input type="text" class="form-control" id="username" name="username"/>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="password" class="col-12 col-sm-3 col-md-2 col-form-label">Password</label>
+              <div class="col-12 col-sm-9 col-md-10">
+                <input type="password" class="form-control" id="password" name="password"/>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-6">
+                <button type="submit" class="btn btn-lg btn-primary">Log in</button>
+              </div>
+              <div class="col-6">
+                <button type="button" class="btn btn-lg btn-info float-right" id="createAccount">Create Account</button>
+              </div>
+            </div>
+          </form>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
