--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
-  <head>
-    <script th:replace="fragments/header :: headerElement"></script>
-    <title>featuresector Homepage</title>
-  </head>
-  <body>
-  <div th:replace="fragments/header :: header"></div>
-    <div class="container">
-      <div class="row" style="margin-top: 2em">
-        <div class="col-8">
-          <h1>Welcome to featuresector</h1>
-        </div>
-      </div>
-    </div>
-  </body>
+<head>
+<script th:replace="fragments/header :: headerElement"></script>
+<title>featuresector Homepage</title>
+</head>
+<body>
+	<div th:replace="fragments/header :: header"></div>
+	<div class="container">
+		<div class="row" style="margin-top: 2em">
+			<div class="col-8">
+				<h1 align="center">
+					<u>Welcome to featuresector</u>
+				</h1>
+				<br><br>
+				<h3>allows app creators to query their users for feature
+					suggestions.</h3>
+				<br><br>
+				<h4>- Users will be able to suggest new features for apps, and then
+					other users will be able to up-vote / down-vote those feature
+					requests.</h4>
+
+
+			</div>
+		</div>
+	</div>
+</body>
 </html>
